本地启动的版本